WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67457
[Chromium] Fix a crashing bug due to raciness around SQL database shutdown.
https://bugs.webkit.org/show_bug.cgi?id=67457
Summary
[Chromium] Fix a crashing bug due to raciness around SQL database shutdown.
Michael Nordman
Reported
2011-09-01 17:08:32 PDT
See
http://code.google.com/p/chromium/issues/detail?id=71551
for more details.
Attachments
crash fix
(1.86 KB, patch)
2011-09-01 17:30 PDT
,
Michael Nordman
levin
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Nordman
Comment 1
2011-09-01 17:30:21 PDT
Created
attachment 106068
[details]
crash fix
Michael Nordman
Comment 2
2011-09-01 17:31:10 PDT
ptal
Michael Nordman
Comment 3
2011-09-01 17:56:46 PDT
storage layout tests are happy with this change on my system
WebKit Review Bot
Comment 4
2011-09-01 18:04:28 PDT
Comment on
attachment 106068
[details]
crash fix Rejecting
attachment 106068
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: wer', u'David Levin', u'--force']" exit_code: 1 Parsed 2 diffs from patch file(s). patching file source/webcore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file source/webcore/storage/chromium/DatabaseTrackerChromium.cpp Hunk #1 FAILED at 129. 1 out of 1 hunk FAILED -- saving rejects to file source/webcore/storage/chromium/DatabaseTrackerChromium.cpp.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'David Levin', u'--force']" exit_code: 1 Full output:
http://queues.webkit.org/results/9580451
Michael Nordman
Comment 5
2011-09-01 18:41:56 PDT
thnx david! i'll land by hand
Michael Nordman
Comment 6
2011-09-01 19:26:58 PDT
Committed
r94383
: <
http://trac.webkit.org/changeset/94383
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug