[Chromium] Fix a crashing bug due to raciness around SQL database shutdown. https://bugs.webkit.org/show_bug.cgi?id=67457

The removeOpenDatabase() method can get called multiple times.
Subsequent calls to it should be harmeless instead of cause a crash.

Reviewed by David Levin.

* storage/chromium/DatabaseTrackerChromium.cpp:
(WebCore::DatabaseTracker::removeOpenDatabase):


Canonical link: https://commits.webkit.org/83292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94383 268f45cc-cd09-0410-ab3c-d52691b4dbfc